--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: V-PMP
 description: A Very Long Instruction Word Packet Manipulator Processor
+show_downloads: "true"
