--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-TARGET=pmp_asm
+TARGET=vpmp_asm
 
 all: ./src/common.h ./src/main.c ./src/utils.c ./src/opcode.h
 	$(CC) $^ -fno-stack-protector -o $(TARGET)
